gccida/c1/make_extraction
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6378:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6384:4: error: expected ';' after expression
rtx v19; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6384:5: error: use of undeclared identifier 'v19'
rtx v19; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6385:4: error: expected ';' after expression
rtx v20; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6385:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6375:14: note: 'v10' declared here
machine_mode v10; // ebp 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6389:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6389:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6390:4: error: expected ';' after expression
rtx v25; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6390:5: error: use of undeclared identifier 'v25'
rtx v25; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6394:4: error: expected ';' after expression
rtx v29; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6394:5: error: use of undeclared identifier 'v29'
rtx v29; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6397:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6400:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/combine.c:6400:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_extraction/src/obj/combine.o] Error 1
